# ResInsight

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .misspell-fixer.ignore  .travis.yml  404.html  BuildInstructions.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets-example-linux.json  CMakeUserPresets-example-windows.json  CMakeUserPresets-example.json  CNAME  Doxyfile.in  GRPC_install_instructions.txt  README  README.md  ResInsightVersion.cmake  ResInsight_HOST.files  ResInsight_HOST.includes  _config.yml  appveyor-build.ps1  azure-pipelines.yml  build_grpc_linux.sh  index.html  index.xml  params.json  requirements.txt  search.md  searchindex.en.js  setup.cfg  sitemap.xml  vcpkg-configuration.json  vcpkg.json  vcpkg_no_grpc.json  vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vcpkg_x64-windows.txt
ApplicationCode/: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  RIMain.cpp  RIStdInclude.cpp  RIStdInclude.h  RiaMain.cpp  RiaStdInclude.cpp  RiaStdInclude.h  RiuThemesDirectory.h.cmake  resinsight  resinsight.desktop.in
ApplicationCode/Adm/: LicenseInformation.txt  RIBaseDefs.h  RIVersionInfo.h  ResInsightLicenseText.txt  RiaBaseDefs.h  RiaVersionInfo.h.cmake  RiaVersionInfo.py.cmake
ApplicationCode/Application/: CMakeLists_files.cmake  RIApplication.cpp  RIApplication.h  RIPreferences.cpp  RIPreferences.h  RiaApplication.cpp  RiaApplication.h  RiaColorTables.cpp  RiaColorTables.h  RiaCompletionTypeCalculationScheduler.cpp  RiaDefines.cpp  (+49 more)
ApplicationExeCode/: CMakeLists.txt  RiaGrpcConsoleApplication.cpp  RiaGrpcConsoleApplication.h  RiaGrpcGuiApplication.cpp  RiaGrpcGuiApplication.h  RiaMain.cpp  RiaMainTools.cpp  RiaMainTools.h  empty.cpp
CommonCode/: CMakeLists.txt  cafEffectCache.cpp  cafEffectCache.h  cafEffectGenerator.cpp  cafEffectGenerator.h  cafLog.cpp  cafLog.h  cafMessagePanel.cpp  cafMessagePanel.h  cafMouseState.cpp  cafMouseState.h  cafUtils.cpp  cafUtils.h  cvfStructGrid.cpp  cvfStructGrid.h  cvfStructGridGeometryGenerator.cpp  cvfStructGridGeometryGenerator.h  cvfStructGridScalarDataAccess.h
Fwk/: CMakeLists.txt
GrpcInterface/: .clang-format  .clang-tidy  CMakeLists.txt  RiaGrpcAppService.cpp  RiaGrpcAppService.h  RiaGrpcApplicationInterface.cpp  RiaGrpcApplicationInterface.h  RiaGrpcCallbacks.h  RiaGrpcCaseService.cpp  RiaGrpcCaseService.h  RiaGrpcCommandService.cpp  RiaGrpcCommandService.h  RiaGrpcGridGeometryExtractionService.cpp  RiaGrpcGridGeometryExtractionService.h  RiaGrpcGridGeometryExtractionServiceHelper.cpp  RiaGrpcGridGeometryExtractionServiceHelper.h  RiaGrpcGridService.cpp  RiaGrpcGridService.h  RiaGrpcHelper.cpp  RiaGrpcHelper.h  RiaGrpcKeyValueStoreService.cpp  RiaGrpcKeyValueStoreService.h  RiaGrpcNNCPropertiesService.cpp  RiaGrpcNNCPropertiesService.h  RiaGrpcPdmObjectService.cpp  RiaGrpcPdmObjectService.h  RiaGrpcProjectService.cpp  RiaGrpcProjectService.h  RiaGrpcPropertiesService.cpp  RiaGrpcPropertiesService.h  RiaGrpcServer.cpp  RiaGrpcServiceInterface.cpp  RiaGrpcServiceInterface.h  RiaGrpcSimulationWellService.cpp
Octave/: CMakeLists.txt
OctavePlugin/: CMakeLists.txt  NNCOctaveInterfaceSpecification.txt  ResInsightOctaveInterfaceSpecification.txt  riGetActiveCellCenters.cpp  riGetActiveCellCorners.cpp  riGetActiveCellInfo.cpp  riGetActiveCellProperty.cpp  riGetCaseGroups.cpp  riGetCases.cpp  riGetCellCenters.cpp  riGetCellCorners.cpp  riGetCoarseningInfo.cpp  riGetCurrentCase.cpp  riGetDynamicNNCValues.cpp  riGetGridDimensions.cpp  riGetGridProperty.cpp  riGetGridPropertyForSelectedCells.cpp  riGetMainGridDimensions.cpp  riGetNNCConnections.cpp  riGetNNCPropertyNames.cpp  riGetPropertyNames.cpp  riGetSelectedCases.cpp  riGetSelectedCells.cpp  riGetStaticNNCValues.cpp  riGetTimeStepDates.cpp  riGetTimeStepDays.cpp  riGetWellCells.cpp  riGetWellNames.cpp  riGetWellStatus.cpp  riSetActiveCellProperty.cpp  riSetGridProperty.cpp  riSetNNCProperty.cpp  riSettings.h  riSocketTools.h
QtPropertyBrowser/: CMakeLists.txt  qtadditions_cmake.txt  qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowser.cpp  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qttreepropertybrowser.cpp
cafProjectDataModel/: CMakeLists.txt  cafAppEnum.h  cafFactory.h  cafFixedArray.h  cafOmpMutex.h  cafPdmDocument.cpp  cafPdmDocument.h  cafPdmField.cpp  cafPdmField.h  cafPdmField.inl  cafPdmFieldImpl.h  cafPdmObject.cpp  cafPdmObject.h  cafPdmObjectFactory.h  cafPdmPointer.cpp  cafPdmPointer.h  cafPdmUIBindingNotes.h  cafPdmUiEditorHandle.cpp  cafPdmUiEditorHandle.h  cafPdmUiFieldEditorHandle.cpp  cafPdmUiFieldEditorHandle.h  cafPdmUiItem.cpp  cafPdmUiItem.h  cafPdmUiObjectEditorHandle.cpp  cafPdmUiObjectEditorHandle.h  cafPdmUiOrdering.cpp  cafPdmUiOrdering.h  cafPdmUiTreeOrdering.cpp  cafPdmUiTreeOrdering.h  cafUiTreeItem.h
cafUserInterface/: CMakeLists.txt  cafBasicAboutDialog.cpp  cafBasicAboutDialog.h  cafPdmUiCheckBoxEditor.cpp  cafPdmUiCheckBoxEditor.h  cafPdmUiColorEditor.cpp  cafPdmUiColorEditor.h  cafPdmUiComboBoxEditor.cpp  cafPdmUiComboBoxEditor.h  cafPdmUiDefaultObjectEditor.cpp  cafPdmUiDefaultObjectEditor.h  cafPdmUiDoubleSliderEditor.cpp  cafPdmUiDoubleSliderEditor.h  cafPdmUiFilePathEditor.cpp  cafPdmUiFilePathEditor.h  cafPdmUiLineEditor.cpp  cafPdmUiLineEditor.h  cafPdmUiListEditor.cpp  cafPdmUiListEditor.h  cafPdmUiListView.cpp  cafPdmUiListView.h  cafPdmUiListViewEditor.cpp  cafPdmUiListViewEditor.h  cafPdmUiPropertyView.cpp  cafPdmUiPropertyView.h  cafPdmUiPushButtonEditor.cpp  cafPdmUiPushButtonEditor.h  cafPdmUiSliderEditor.cpp  cafPdmUiSliderEditor.h  cafPdmUiTextEditor.cpp  cafPdmUiTextEditor.h  cafPdmUiTreeView.cpp  cafPdmUiTreeView.h  cafPdmUiTreeViewEditor.cpp  cafPdmUiTreeViewEditor.h  cafProgressInfo.cpp  cafProgressInfo.h  cafUiProcess.cpp  cafUiProcess.h  cafUiPropertyCreatorPdm.cpp  (+4 more)
cafViewer/: CMakeLists.txt  cafCadNavigation.cpp  cafCadNavigation.h  cafCeetronNavigation.cpp  cafCeetronNavigation.h  cafNavigationPolicy.cpp  cafNavigationPolicy.h  cafOpenGLWidget.cpp  cafOpenGLWidget.h  cafViewer.cpp  cafViewer.h
native-python/: CMakeLists.txt  empty.cpp  example.cpp  test_example.py
(+11090 files in other folders)
